--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                                 <li><a href="./elements.html">Shop</a></li>
                                 <li><a href="./blog.html">News</a></li>
                                 <li><a href="./contact.html">Contact</a></li>
+                                 <li><a href="https://www.browserstack.com" target="_blank">Browserstack</a></li>
                             </ul>
                         </nav>
                         <div id="mobile-menu-wrap"></div>
